Footer spacing fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11104,7 +11104,7 @@ html.lenis body {
 }
 .rs-footer-two .rs-footer-widget-description {
   color: var(--rs-text-secondary);
-  margin-bottom: 40px;
+  /* margin-bottom: 40px; */
 }
 .rs-footer-two .descrip {
   color: var(--rs-text-secondary);
@@ -25912,3 +25912,4 @@ ul li:nth-child(3) .offcanvas-contact-icon {
 .industrie-we-serve{
   font-size: 45px !important;
 }}
+
